Fix archive test Added Path to repository constructor for tests